<resources>
    <string name="app_name">Traductor-ML-Kotlin</string>
    <string name="Tv_bienvenido">Bienvenidos</string>
    <string name="Et_Idioma_Origen">Ingrese texto:</string>
    <string name="Tv_Idioma_Destino">Traduccion</string>
    <string name="Btn_Elegir_Idioma">Español</string>
    <string name="Btn_Idioma_Elegido">Ingles</string>
    <string name="Btn_Traducir">Traducir</string>

    <string name="Menu_Limpiar_texto">Limpiar</string>
    <string name="Menu_Informacion">Informacion</string>
    
    <string name="Txt_mensaje">Para descargar los paquetes de idiomas se requiere una conexion Wifi</string>
    <string name="Btn_entendido">Comprendido</string>

</resources>